compiler/tests/template/success/test9.jazz
// fails with bad error

fn f{p}(reg ptr u64[p] r) -> reg u64 {
  reg u64 res = r [0];
  return res;
}

export fn main{p,q} (reg u64[p+q] r) -> reg u64 {
  reg u64 res = f{p+q}(r);
  return res;
}
