compiler/tests/template/fail/reg_array.jazz
export fn main{p} () -> reg u64 {
  reg u64[p] r;
  reg u64 res = r[0];
  return res;
}
